# poc-multiagent-movie-calendar

./: .gitignore  README.md  pyproject.toml
data/: test-set.csv
notebooks/: crew-ai.ipynb
src/: generate_model.py  inference.py
src/movies_newsletter_multi_agent/: crew.py
src/movies_newsletter_multi_agent/config/: agents.yaml  tasks.yaml
src/movies_newsletter_multi_agent/domain/: movie.py
src/movies_newsletter_multi_agent/tools/: search_in_web.py
src/utils/: mlflow_utils.py
